--- a/css/base.css
+++ b/css/base.css
@@ -154,7 +154,7 @@
 ._fbw-comments li {
   list-style: none;
   margin: 0 -8px;
-  padding: 10px;
+  padding: 6px 10px;
   border-top: 1px solid white;
 }
 
@@ -175,6 +175,7 @@
 }
 
 ._fbw-comments li ._fbw-comment-content {
+  line-height: 16px;
   margin-left: 50px;
 }
 
