Added spinner and styled button

--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,19 @@
 
 ._fbw-feed {
   font-family: "Flama-Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 10px;
+}
+
+._fbw-feed ._fbw-loading, ._fbw-feed ._fbw-empty {
+  margin: 30px auto;
+  text-align: center;
+  font-size: 22px;
+}
+._fbw-feed ._fbw-loading ._fbw-spinner {
+  margin: 20px auto;
+  width: 54px;
+  height: 54px;
+  position: relative !important;
 }
 
 ._fbw-post-list {
@@ -80,6 +93,7 @@
   padding: 3px;
   max-width: 100%;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 
@@ -186,4 +200,37 @@
 
 ._fbw-comments li ._fbw-comment-time {
   color: rgba(0,0,0,0.5);
+}
+
+/*Button*/
+._fbw-feed button {
+  display: inline-block;
+  padding: 4px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 20px;
+  color: #333333;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+  background-repeat: repeat-x;
+  border: 1px solid #cccccc;
+  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  border-bottom-color: #b3b3b3;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
