--- a/css/base.css
+++ b/css/base.css
@@ -6,6 +6,22 @@
 ._fbw-feed {
   font-family: "Flama-Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-bottom: 10px;
+  /*-webkit-tap-highlight-color: rgba(0,0,0,0);*/
+}
+
+._fbw-btn-link {
+  cursor: pointer;
+  border-color: transparent;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+._fbw-btn-link, ._fbw-btn-link:active, ._fbw-btn-link[disabled] {
+  background-color: transparent;
+  background-image: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 
 ._fbw-feed ._fbw-loading, ._fbw-feed ._fbw-empty {
@@ -39,6 +55,7 @@
   border: 1px solid rgba(0,0,0,0.3);
   margin: 8px;
   font-size: 14px;
+  overflow-x: hidden;
 }
 ._fbw-post a, ._fbw-post ._fbw-post-link {
   color: #5c9631;
@@ -96,6 +113,10 @@
   cursor: pointer;
 }
 
+._fbw-post-type-photo img._fbw-thumbnail {
+  max-width: 100px !important;
+}
+
 
 /*Link Post*/
 ._fbw-post-type-link {
@@ -148,16 +169,22 @@
 }
 
 ._fbw-comments-comment-input {
-  height: 25px;
+  height: 30px;
   width: 100%;
+  padding-left: 5px;
+  font-size: 14px;
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-right: none;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
 }
 
 ._fbw-comments-comment-post {
   line-height: 16px;
   width: 60px;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
 }
 
 ._fbw-comments {
@@ -206,7 +233,7 @@
 ._fbw-feed button {
   display: inline-block;
   padding: 4px 12px;
-  margin-bottom: 0;
+  margin: 0;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -233,4 +260,10 @@
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+._fbw-feed button:disabled {
+  color: #AAAAAA;
+  background-image: none;
+
 }
