--- a/app/assets/css/facebookwall/spinner.css
+++ b/app/assets/css/facebookwall/spinner.css
@@ -1,11 +1,11 @@
- div._fbw-spinner  {
+ div.fbw-spinner  {
   position: relative;
   width: 54px;
   height: 54px;
   display: inline-block;
 }
 
-div._fbw-spinner div {
+div.fbw-spinner div {
   width: 12%;
   height: 26%;
   background: #000;
@@ -18,18 +18,18 @@ div._fbw-spinner div {
   -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2);
 }
 
-div._fbw-spinner  div._fbw-bar1 {-webkit-transform:rotate(0deg) translate(0, -142%); -webkit-animation-delay: 0s;}    
-div._fbw-spinner  div._fbw-bar2 {-webkit-transform:rotate(30deg) translate(0, -142%); -webkit-animation-delay: -0.9167s;}
-div._fbw-spinner  div._fbw-bar3 {-webkit-transform:rotate(60deg) translate(0, -142%); -webkit-animation-delay: -0.833s;}
-div._fbw-spinner  div._fbw-bar4 {-webkit-transform:rotate(90deg) translate(0, -142%); -webkit-animation-delay: -0.75s;}
-div._fbw-spinner  div._fbw-bar5 {-webkit-transform:rotate(120deg) translate(0, -142%); -webkit-animation-delay: -0.667s;}
-div._fbw-spinner  div._fbw-bar6 {-webkit-transform:rotate(150deg) translate(0, -142%); -webkit-animation-delay: -0.5833s;}
-div._fbw-spinner  div._fbw-bar7 {-webkit-transform:rotate(180deg) translate(0, -142%); -webkit-animation-delay: -0.5s;}
-div._fbw-spinner  div._fbw-bar8 {-webkit-transform:rotate(210deg) translate(0, -142%); -webkit-animation-delay: -0.41667s;}
-div._fbw-spinner  div._fbw-bar9 {-webkit-transform:rotate(240deg) translate(0, -142%); -webkit-animation-delay: -0.333s;}
-div._fbw-spinner  div._fbw-bar10 {-webkit-transform:rotate(270deg) translate(0, -142%); -webkit-animation-delay: -0.25s;}
-div._fbw-spinner  div._fbw-bar11 {-webkit-transform:rotate(300deg) translate(0, -142%); -webkit-animation-delay: -0.1667s;}
-div._fbw-spinner  div._fbw-bar12 {-webkit-transform:rotate(330deg) translate(0, -142%); -webkit-animation-delay: -0.0833s;}
+div.fbw-spinner  div.fbw-bar1 {-webkit-transform:rotate(0deg) translate(0, -142%); -webkit-animation-delay: 0s;}    
+div.fbw-spinner  div.fbw-bar2 {-webkit-transform:rotate(30deg) translate(0, -142%); -webkit-animation-delay: -0.9167s;}
+div.fbw-spinner  div.fbw-bar3 {-webkit-transform:rotate(60deg) translate(0, -142%); -webkit-animation-delay: -0.833s;}
+div.fbw-spinner  div.fbw-bar4 {-webkit-transform:rotate(90deg) translate(0, -142%); -webkit-animation-delay: -0.75s;}
+div.fbw-spinner  div.fbw-bar5 {-webkit-transform:rotate(120deg) translate(0, -142%); -webkit-animation-delay: -0.667s;}
+div.fbw-spinner  div.fbw-bar6 {-webkit-transform:rotate(150deg) translate(0, -142%); -webkit-animation-delay: -0.5833s;}
+div.fbw-spinner  div.fbw-bar7 {-webkit-transform:rotate(180deg) translate(0, -142%); -webkit-animation-delay: -0.5s;}
+div.fbw-spinner  div.fbw-bar8 {-webkit-transform:rotate(210deg) translate(0, -142%); -webkit-animation-delay: -0.41667s;}
+div.fbw-spinner  div.fbw-bar9 {-webkit-transform:rotate(240deg) translate(0, -142%); -webkit-animation-delay: -0.333s;}
+div.fbw-spinner  div.fbw-bar10 {-webkit-transform:rotate(270deg) translate(0, -142%); -webkit-animation-delay: -0.25s;}
+div.fbw-spinner  div.fbw-bar11 {-webkit-transform:rotate(300deg) translate(0, -142%); -webkit-animation-delay: -0.1667s;}
+div.fbw-spinner  div.fbw-bar12 {-webkit-transform:rotate(330deg) translate(0, -142%); -webkit-animation-delay: -0.0833s;}
 
      @-webkit-keyframes fade {
       from {opacity: 1;}
