Updated base styles

--- a/app/assets/css/facebookwall/base.css
+++ b/app/assets/css/facebookwall/base.css
@@ -4,7 +4,7 @@
 }
 
 .fbw-feed {
-  font-family: "Flama-Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-bottom: 10px;
 }
 
